--- a/main.ipynb
+++ b/main.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMoy+Eo7pCIC5hwuQvypgdT",
+      "authorship_tag": "ABX9TyM1RJq9tTpv2Eh6G4vrLGnH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,13 +27,361 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Importing Libraries"
+      ],
+      "metadata": {
+        "id": "Sh0LDfm0miXj"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "xnoN6qBCjxOZ"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.ensemble import RandomForestRegressor\n",
+        "from sklearn import metrics"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Read the Dataset"
+      ],
+      "metadata": {
+        "id": "gpXRFs7wmxCK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "gold_data = pd.read_csv('')"
+      ],
+      "metadata": {
+        "id": "I7aBBRT5mgwN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "First 5 rows"
+      ],
+      "metadata": {
+        "id": "yVi46HF9nI3T"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "gold_data.head()"
+      ],
+      "metadata": {
+        "id": "77vKaaZrnGHL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Last 5 rows"
+      ],
+      "metadata": {
+        "id": "DpoWHg3wnSGC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "gold_data.tail()"
+      ],
+      "metadata": {
+        "id": "lgjoQUDYnWyy"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "gold_data.shape\n",
+        "gold_data.info()\n",
+        "gold_data.isnull().sum()\n",
+        "gold_data.describe()"
+      ],
+      "metadata": {
+        "id": "T9wQrDQwngVS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Getting Correlation"
+      ],
+      "metadata": {
+        "id": "4gbXbZtTnl5L"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "correlation = gold_data.corr()"
+      ],
+      "metadata": {
+        "id": "rV48r977nxuS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Correlation figure"
+      ],
+      "metadata": {
+        "id": "JlP-SeS0n3oa"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.figure(figsize = (8, 8))\n",
+        "sns.heatmap(correlation, cbar = True, square = True, fwt='.lf', annot = True, annot_kws = {'size': 8}, cmap = 'Blues')"
+      ],
+      "metadata": {
+        "id": "LAVvgjuvnyyK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Correlation values of GLD"
+      ],
+      "metadata": {
+        "id": "oQvEnmOboZ7q"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(correlation['GLD'])"
+      ],
+      "metadata": {
+        "id": "z5seWc7lobFi"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Checking the distribution of the GLD Price"
+      ],
+      "metadata": {
+        "id": "TI0Y3xVRocHS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sns.distplot(gold_data['GLD'], color = 'green')"
+      ],
+      "metadata": {
+        "id": "APdwZzc5ockC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Splitting the Features and Target"
+      ],
+      "metadata": {
+        "id": "chaX4THSo5nT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X = gold_data.drop(['Date', 'GLD'], axis = 1)\n",
+        "Y = gold_data['GLD']"
+      ],
+      "metadata": {
+        "id": "jXEYZxaUpBua"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(Y)"
+      ],
+      "metadata": {
+        "id": "-yle-Lkapf5j",
+        "outputId": "5c5d5bd2-b0ba-484a-9dfb-4fd0384680a6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Splitting into Training data and Test Data"
+      ],
+      "metadata": {
+        "id": "ymJJvXJ1px0r"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_train, X_test, Y_train, Y_test =  train_test_split(X, Y, test_size = 0.2, random_state = 2)"
+      ],
+      "metadata": {
+        "id": "LHBDikZ9p4Rb"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Model Training: Random Forest Regressor"
+      ],
+      "metadata": {
+        "id": "dWi5ZDHvqfJt"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "regressor = RandomForestRegressor(n_estimators=100)"
+      ],
+      "metadata": {
+        "id": "eA53fjkvqqFz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "regressor.fit(X_train, Y_train)"
+      ],
+      "metadata": {
+        "id": "Aum4EEubqwsc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Model Evaluation"
+      ],
+      "metadata": {
+        "id": "kgrh8RETq8Pr"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_data_prediction = regressor.predict(X_test)"
+      ],
+      "metadata": {
+        "id": "sPMc-Y3Kq6_T"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(test_data_prediction)"
+      ],
+      "metadata": {
+        "id": "wfctf59TrJFK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# R squared error\n",
+        "error_score = metrics.r2_score(Y_test, test_data_prediction)\n",
+        "print(\"R squared error: \", error_score)"
+      ],
+      "metadata": {
+        "id": "YII2FKMerIIa"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Compare the Actual Values and Predicted Values in a Plot"
+      ],
+      "metadata": {
+        "id": "oQgNAhr6rxyM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Y_test = list(Y_test)"
+      ],
+      "metadata": {
+        "id": "f9FdDHJjr8cS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.plot(Y_test, color = 'blue', label = 'Actual Value')\n",
+        "plt.plot(test_data_prediction, color = 'green', label = 'Predicted Value')\n",
+        "plt.title('Actual Price vs Predicted Price')\n",
+        "plt.xlabel('Number of Values')\n",
+        "plt.ylabel('GLD Price')\n",
+        "plt.legend()\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "ASMkDCNEsCMK"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
